k8s/ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thingsboard-ingress
  namespace: thingsboard
  annotations:
    kubernetes.io/ingress.class: traefik
    #    traefik.frontend.rule.type: PathPrefixStrip
    traefik.frontend.rule.type: PathPrefix
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: thingsboard.apps.k8s.cablevision-labs.com.ar
    http:
      paths:
      - backend:
          serviceName: tb-http-transport
          servicePort: 8080
        path: /api/v1/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /api/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /swagger
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /webjars
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /v2/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /static/rulenode/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /oauth2/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /login/oauth2/
      - backend:
          serviceName: tb-web-ui
          servicePort: 8080
        path: /
  #add host to DNS first!
  tls:
   - hosts:
     - thingsboard.apps.k8s.cablevision-labs.com.ar
       #secretName: thingsboard-cert-letsencrypt-staging
     secretName: thingsboard-cert-letsencrypt-prod
